Update HTML files

--- a/session 2/session 2_10.html
+++ b/session 2/session 2_10.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <table border="2">
+    <h4>QUẢN LÝ SINH VIÊN</h4>
+    <table border="1" cellpadding="0">
         <tr>
             <th>ID</th>
             <th>Họ và tên</th>
@@ -17,37 +18,37 @@
             <th colspan="4">Khoá A </th>
         </tr>
         <tr>
-            <th>1</th>
-            <th>Trần Xuân Son</th>
-            <th>7</th>
-            <th>KHá</th>
+            <td>1</td>
+            <td>Trần Xuân Son</td>
+            <td>7</td>
+            <td>KHá</td>
         </tr>
         <tr>
 
-            <th>2</th>
-            <th>Nguyễn Xuân Son</th>
-            <th>8</th>
-            <th></th>
+            <td>2</td>
+            <td>Nguyễn Xuân Son</td>
+            <td>8</td>
+            <td></td>
         </tr>
         <tr>
             <th colspan="4">Khoá B</th>
         </tr>
         <tr>
-            <th>3</th>
-            <th>Trịnh Xuân Son</th>
-            <th>5</th>
-            <th>Trung bình</th>
+            <td>3</td>
+            <td>Trịnh Xuân Son</td>
+            <td>5</td>
+            <td>Trung bình</td>
         </tr>
         <tr>
-            <th>4</th>
-            <th>Hoàng Xuân Son</th>
-            <th>10</th>
-            <th>Giỏi</th>
+            <td>4</td>
+            <td>Hoàng Xuân Son</td>
+            <td>10</td>
+            <td>Giỏi</td>
         </tr>
         <tr>
             <th colspan="2">TỔNG CỘNG</th>
-            <th>7,5</th>
-            <th>Khá</th>
+            <td>7,5</td>
+            <td>Khá</td>
         </tr>
     </table>
 </body>
